WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85383
[BlackBerry] Double tap zooming does nothing on small size table
https://bugs.webkit.org/show_bug.cgi?id=85383
Summary
[BlackBerry] Double tap zooming does nothing on small size table
Jacky Jiang
Reported
2012-05-02 09:46:36 PDT
PR153232. Steps to reproduce: 1. Launch the browser and visit the attached test. 2. Try double tap zoom the table. Expected: --------- 2) the table zooms in Actual: ------- 2) Nothing happens
Attachments
the test
(222 bytes, text/html)
2012-05-02 09:47 PDT
,
Jacky Jiang
no flags
Details
Patch
(2.36 KB, patch)
2012-05-02 12:17 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-05-02 09:47:00 PDT
Created
attachment 139830
[details]
the test
Jacky Jiang
Comment 2
2012-05-02 12:17:47 PDT
Created
attachment 139857
[details]
Patch
WebKit Review Bot
Comment 3
2012-05-02 13:52:21 PDT
Comment on
attachment 139857
[details]
Patch Clearing flags on attachment: 139857 Committed
r115883
: <
http://trac.webkit.org/changeset/115883
>
WebKit Review Bot
Comment 4
2012-05-02 13:52:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug