[BlackBerry] Double tap zooming does nothing on small size table https://bugs.webkit.org/show_bug.cgi?id=85383

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-05-02
Reviewed by George Staikos.

PR: 153232
When we search the best node for block zoom, if the initial node's new
scale exceeds the maximum block zoom scale, we will try to walk through
it's ancestors and pick the acceptable one. But the reality is that the
acceptable ancestor's size can be too close to the size of the actual
contents, we will do nothing for it. As we will still select the
minimum of the new scale and the maximum block zoom scale as block zoom
scale, we can ignore such kind of node and use the initial node instead.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::adjustedBlockZoomNodeForZoomLimits):

Canonical link: https://commits.webkit.org/102961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115883 268f45cc-cd09-0410-ab3c-d52691b4dbfc